# FawnAlgebra

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  build.bat  setup.bat  test.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  ubuntu.yml  windows.yml
CMake/: SetupCatch.cmake
cmake/: compiler_flags.cmake  compiler_select_flags.cmake  compiler_select_linker.cmake  compiler_select_sdl.cmake  setup_catch.cmake
includes/: FawnAlgebra.ixx  arithmetic.hpp  arithmetics.ixx  aritmetics.ixx  bezier.ixx  constants.hpp  constants.ixx  dekkerdouble.hpp  easing.hpp  hashing.hpp  hashing.ixx  interpolation.hpp  interpolation.ixx  random.hpp  random.ixx  statistics.hpp  statistics.ixx  trigonometric.hpp  trigonometric.ixx
includes/config/: architecture.hpp  assert.hpp  compiler.hpp  platform.hpp  todo.hpp
includes/triangulation/: EarClip.ixx  HertelMehlhorn.ixx  Triangulation.ixx
source/: FawnAlgebra.ixx  arithmetics.ixx  bezier.ixx  constants.ixx  dekkerdouble.hpp  geometric_algebra_arithmetics.ixx  hashing.ixx  interpolation.ixx  random.ixx  simd.ixx  statistics.ixx  trigonometric.ixx
source/config/: architecture.hpp  assert.hpp  compiler.hpp  platform.hpp  todo.hpp
source/geometry/: aabb.hpp  bounding_sphere.hpp  obb.hpp
source/space_partitioning/: bounding_volume_hierarchy.hpp  kdtree.hpp  octree.hpp  quadtree.hpp  ray.hpp
tests/: CMakeLists.txt  arithmetics.cpp  aritmetics.cpp  bezier.cpp  hashing.cpp  interpolation.cpp  main.cpp  random.cpp  simd.cpp  statistics.cpp
tests/geometry/: aabb.cpp  bounding_sphere.cpp
